vision/vibes/GRAMMAR.ebnf
(* The vision syntax, as a patch on `spec/spec/grammar.md`.

   Every rule here *replaces* the spec's rule of the same name, and `tools/specparse.ts` runs the
   result over `vision/`:

       deno run --allow-read tools/specparse.ts vision

   This is the machine-readable half of `GRAMMAR.md`, which lists the same constructs in prose and
   in tables. The prose is the argument; this is the claim. They can disagree and this one is
   checkable, which is the point of writing it: `GRAMMAR.md` was derived by subtraction — what
   today's parser refuses, minus what a desugarer accounts for — and a grammar that *accepts* every
   vision file is a much stronger statement than a list of things that do not parse.

   A rule that is not here is the spec's, unchanged. That is what makes this readable as a diff.

   ## No lexer changes, which was not planned

   `try`, `gen`, `defer`, `schedule`, `yield`, `in`, `union` and `secret` are not in the spec's
   keyword fence, so `specparse` lexes them as `IDENT` — and a literal in a rule matches an `IDENT`
   spelled that way, because the spec already needs that for `from` and `fill`. So every word vision
   adds is contextual for free.

   Contextual is also the right answer, not a convenience: `union` is a word programs use, and
   taking it away is a cost the vision pages never priced. Making them real keywords is a decision
   with a sweep behind it, and this file does not take it. *)

(* ── Declarations ────────────────────────────────────────────────────────────────────────────── *)

(* A re-export, and a named type. `export union<A, B> Fault;` and `export Slice<u8> Bytes;` are one
   form: a type, given a name. `GRAMMAR.md` argues they should be, and this is what that costs — a
   rule that is ambiguous with `const_decl` minus its `= expr`, resolved by there being no `=`. *)
program        = { import | reexport | typedef | struct_decl | enum_decl | func_decl | const_decl } ;
reexport       = "export" , "{" , import_list , "}" , "from" , source , ";" ;
typedef        = [ "export" ] , type , IDENT , ";" ;
                 (* A type, a name, a semicolon — the same shape as a field declaration, and as a
                    variable with no initialiser. It parses only because wac has no top-level
                    variables. `QUESTIONS.md` has what that spends. *)

(* A default type argument — `enum Result<T, E = union>`. The default is a type, and `union` with no
   arguments is the "whatever the body passes on" form `core/result.wac` relies on. *)
type_params    = "<" , type_param , { "," , type_param } , [ "," ] , ">" ;
type_param     = IDENT , [ "=" , type ] ;

(* A generic parent: `struct AllOf<T> : Ticket<T[]>`. Five files need it and the whole ticket design
   rests on it. The spec has `[ ":" , IDENT ]`. *)
struct_decl    = [ "export" ] , [ "const" ] , "struct" , IDENT , [ type_params ] ,
                 [ ":" , type ] , "{" , { struct_member } , "}" ;

(* **A method with no body is withdrawn**, and `( block | ";" )` is `block` again below. It had
   seventeen uses on 2026-09-04 and has none: every one was an abstract method with subclasses
   overriding it, and dispatch in wac is static, so none of the overrides ran. The projections, the
   tickets, the coroutines, `Socket`, `Listener` and `Child` are all structs of funcrefs now — see
   `../core/ticket.wac` for the argument — and a funcref field needs no declaration-without-a-body.

   Withdrawn rather than kept for the reason `GRAMMAR.md` gives about desugaring rules: a construct
   in this file with no use in the tree is a proposal nobody is making. The argument *for* it — that
   an abstract method catches a subclass which never overrides, where a trapping body only traps if
   the path is taken — was real and is now an argument about a design vision does not use.

   `gen<T>` before the return type stays: it says the function is a coroutine that yields `T` and
   answers the type after it. *)
method_decl    = [ "override" ] , [ "async" ] , [ gen_yield ] , type , name , [ type_params ] ,
                 "(" , [ method_params ] , ")" , block ;
func_decl      = [ "export" ] , [ "async" ] , [ gen_yield ] , type , name , [ type_params ] ,
                 "(" , [ param_list ] , ")" , block ;
gen_yield      = "gen" , "<" , type , ">" ;

(* `secret`, from `crypto/src/secret.wac`. A qualifier beside `const`, because that is what it is
   modelled on — a flag per name in the checker's scope table. *)
param          = [ "const" ] , [ "secret" ] , type , name ;

(* ── Statements ──────────────────────────────────────────────────────────────────────────────── *)

statement      = block
               | var_decl
               | assign_stmt
               | compound_stmt
               | if_stmt
               | while_stmt
               | for_stmt
               | do_while_stmt
               | switch_stmt
               | match_stmt
               | return_stmt
               | break_stmt
               | continue_stmt
               | trap_stmt
               | defer_stmt
               | schedule_stmt
               | yield_stmt
               | expr_stmt ;

(* `defer { conn.close(); }` — `server/main` and `core/ticket`. A block rather than an expression,
   because what is deferred is cleanup and cleanup is statements. *)
defer_stmt     = "defer" , block ;

(* `schedule this.pending.push;` — the target is a funcref *value*, not a call, which is why this is
   not an `expr_stmt` with a keyword on the front. `Sys.drain` is the only writer today. *)
schedule_stmt  = "schedule" , expr , ";" ;

(* `yield x;` and a bare `yield;` for a `gen<void>`. *)
yield_stmt     = "yield" , [ expr ] , ";" ;

(* `for (Param p in q.params.items())`, and `try await for (Bytes chunk in gunzip(src))`.

   The `try` and the `await` belong to the *loop*, not to the subject: `try` propagates the
   generator's return and `await` says each step suspends. Written as two optional words on the
   head rather than as an expression prefix, because `await for` is not `await` applied to
   anything. `vision/QUESTIONS.md` has what neither of them settles — whether the loop binds the
   generator's return value at all. *)
for_stmt       = [ "try" ] , [ "await" ] , "for" , "(" , for_head , ")" , block ;
for_head       = type , IDENT , "in" , expr
               | [ for_init ] , ";" , [ expr ] , ";" , [ for_update ] ;

(* An arm without `case`. The spec's `match_arm` and `match_value_arm` require it; vision drops it
   and `DECISIONS.md` renames `else:` to `default:`. Both spellings are here on purpose — the tree
   still writes `else:` and this file is meant to parse the tree as it is, not as it should be. *)
match_arm      = [ "case" ] , IDENT , [ arm_payload ] , ":" , { statement }
               | ( "else" | "default" ) , ":" , { statement } ;
match_value_arm = ( [ "case" ] , IDENT , [ arm_payload ] | "else" | "default" ) , ":" , arm_value ;

(* ── Expressions and types ───────────────────────────────────────────────────────────────────── *)

(* `try` and `await` at the same level, so `try await br.byte()` is one chain and both bind tighter
   than any binary operator and looser than postfix. `await`'s rule is the spec's, established by
   `design/lang/0014`; `try` takes the same one because a `try` that bound looser would make
   `try a + b` mean `try (a + b)`, which reads as though the addition could fail. *)
unary_expr     = ( "-" | "!" | "~" ) , unary_expr
               | ( "++" | "--" ) , unary_expr
               | "await" , [ unary_expr ]
               | "try" , unary_expr
               | postfix_expr ;

(* `union<A, B>` in type position, and `T??` — the second needs nothing, since the spec already
   writes `type = … | type , "?"` and that nests. *)
type           = primitive_type
               | "string"
               | union_type
               | IDENT , [ type_args ]
               | array_type
               | funcref_type
               | type , "?"
               | "anyref"
               | "i31ref" ;
union_type     = "union" , [ "<" , type , { "," , type } , [ "," ] , ">" ] ;

(* `never` is **not** here, and parses anyway: an unknown word is an `IDENT` and `IDENT , [ type_args ]`
   is a type, so `Coroutine<never, Y, R>` reads as a type argument named `never`. That is an accident
   rather than a decision — a program may declare its own `never` and two do in `packages/` — and
   whether it becomes a keyword is in `QUESTIONS.md` with the other eight. Cheap if so: 12 uses in
   code against 1,882 in prose. *)

(* `fn<void()>` — the same rule as the spec's with the brackets swapped, which is the whole of that
   change. It is a rename rather than an addition, and it is here because a delta that only carried
   additions could not parse a vision file that uses it. *)
funcref_type   = "fn" , "<" , type , "(" , [ type_list ] , ")" , ">" ;

(* `trap` where a value is wanted. `core/result.wac` writes `Err(_): trap why,` — a match arm is an
   expression and this arm produces nothing, which is what a bottom type is for. `GRAMMAR.md` lists
   it as one of the two constructs nobody had accounted for; this is the accounting.

   Ambiguous with `trap_stmt` inside an `expr_stmt`, and deliberately left so: they mean the same
   thing and a recogniser has no reason to prefer one. A compiler picks the statement.

   **`+=` rather than `=`**, which is the whole reason that form exists. This rule first copied the
   spec's `primary_expr` whole in order to add one branch, and two hours later the spec's version
   gained `string_literal` and `jsx_expr` — so the vision grammar stopped parsing two of its own
   files for a reason that had nothing to do with vision. A patch states what it changes. *)
primary_expr  += "trap" , [ expr ] ;

(* ── Six more, from the vetted pages rather than from the rewrites ──────────────────────────────

   Everything above was derived from `vision/packages/**`, which made this file a closed list of what
   the *rewrites* use and not of what vision proposes. Extracting the 64 ```wac fences from
   `SHOWCASE.md`, `IDIOMS.md`, `TECHNICAL.md` and `QUESTIONS.md` and parsing them found six
   constructs on the agreed pages that no rewrite had ever written. `auto` is on three of them. *)

(* A verbatim name — `TECHNICAL.md`'s first two entries, and the reason is `for`: an HTML attribute
   whose name is a wac keyword has to be spellable. `@"n"` and `n` are the same name and the compiler
   warns about the pointless quoting, so this is a spelling rather than a namespace. *)
verbatim_name  = "@" , STRING ;
name           = IDENT | verbatim_name ;


(* A quoted tag, and a hyphenated attribute. `<"my-widget" data-size="8" />` is why both exist: a
   custom element's name is not an identifier and neither is a data attribute's. *)
jsx_element    = "<" , jsx_tag , { jsx_attr } ,
                 ( "/" , ">" | ">" , { jsx_child } , "<" , "/" , jsx_tag , ">" ) ;
jsx_tag        = IDENT | STRING | verbatim_name ;
jsx_attr       = jsx_attr_name , "=" , ( STRING | "{" , expr , "}" ) ;
jsx_attr_name  = IDENT , { "-" , IDENT } | verbatim_name | keyword_as_name ;

(* `auto`, on `SHOWCASE.md`, `IDIOMS.md` and `QUESTIONS.md` — the construct with the widest presence
   on the vetted pages and no presence at all in the grammar until now. `QUESTIONS.md` already has an
   entry about it refusing to widen, so its *semantics* were being discussed while its syntax was
   missing. *)
var_decl       = [ "const" ] , ( type | "auto" ) , IDENT , "=" , expr , ";" ;

(* A bracket literal, on three pages: `const i32[] xs = [1, 2, 3];` and
   `sys.spawn(wasm, [], [Grant.Read])`. Today that is `i32[](1, 2, 3)`, so this is a rename in the
   same class as `fn<…>` — and unlike that one it *adds* rather than replaces, since the
   construction form still parses. *)
list_literal   = "[" , [ arg_list ] , "]" ;

(* `coroutine tick()` — the expression that makes a `Coroutine` out of a call. `gen<T>` above says a
   function *is* one; this is how a caller gets a machine rather than running it. *)
coroutine_expr = "coroutine" , postfix_expr ;

primary_expr  += verbatim_name | list_literal | coroutine_expr ;

(* `Err(is NotFound):` — a payload matched by type rather than bound by name. Two uses, both in
   `TECHNICAL.md`, and it is the only one of the six that is a new kind of *pattern* rather than a
   new spelling for something. *)
binding_list   = binding , { "," , binding } , [ "," ] ;
binding        = IDENT | "is" , type ;

(* ── Four more, found by the same pass on its second round ──────────────────────────────────────

   Adding the six above let the fences get further and stop somewhere new, which is the ordinary
   behaviour of a parser and the reason a single pass is a lower bound. Ten in total, from pages that
   nothing had ever read. *)

(* A **brace pattern**: `Ok { v }:` binds by field name and `Err { .. }:` ignores the rest. The
   parenthesised form binds by position, so these are two pattern languages and only one of them was
   written down. *)
arm_payload    = "(" , [ binding_list ] , ")" | "{" , field_pattern , "}" ;
field_pattern  = ".." | IDENT , { "," , IDENT } , [ "," , ".." ] , [ "," ] ;

(* **A control-flow arm.** `Err(_): continue,` in a `match` used as an expression — the arm produces
   no value and leaves the loop instead, which is the same shape as `trap` in an arm and needs the
   same permission. `break` and `return` are here because refusing them would be a rule with no
   reason rather than a smaller change. *)
arm_value      = expr | "continue" | "break" | "return" , [ expr ] ;

(* A verbatim name as a tag, and a keyword as an attribute name. `<@"caption">` is the third spelling
   in `TECHNICAL.md`'s own three-way comparison, and `for={…}` is the attribute the `@"for"` entry
   exists for — the parameter needs quoting and the attribute does not, which is the whole point and
   is why `jsx_attr_name` has to admit a keyword. *)
keyword_as_name = "for" | "if" | "is" | "as" | "in" | "match" | "return" | "const" | "this" ;

(* The six that cost nothing — measured 2026-09-05: zero uses as an identifier in the shipped
   tree. `secret` (175) and `gen` (38) are deliberately absent; see QUESTIONS.md. *)
(* keywords += try yield defer schedule auto coroutine *)
