compiler/wacParse.ts
// Parser for wac — converts a token array into an AST.
// Returns a Program node and any parse errors (partial AST on error).

import { type Token, type TokenKind } from "./wacLex.ts";
import { CORE } from "./wacCore.ts";

// ── AST node types ────────────────────────────────────────────────────────────

export type Pos = { line: number; col: number };

// Types -----------------------------------------------------------------------

export type WacType =
  | ({ kind: "prim";     name: string } & Pos)
  // `name` is the struct name as written (possibly an import alias) — struct
  // declarations are only unique within their own file, so two files can
  // declare the same bare name. `resolvedTypeIndex`, when known, is the
  // globally-unique StructEntry.typeIndex this reference actually points to;
  // consumers should prefer it over re-resolving `name` through a bare-name
  // map. It's optional because the parser can't know it (resolution happens
  // later) — set it wherever a WacType is reconstructed from an
  // already-resolved StructEntry/FuncEntry instead of from source text.
  // `typeArgs` are the arguments of a generic reference — `Vec<i32>` parses as a struct type
  // named `Vec` with one argument. The resolver substitutes them and registers a concrete
  // struct, so nothing after the resolver ever sees a non-empty `typeArgs`.
  | ({ kind: "struct";   name: string; resolvedTypeIndex?: number; typeArgs?: WacType[] } & Pos)
  | ({ kind: "array";    elem: WacType } & Pos)
  | ({ kind: "nullable"; inner: WacType } & Pos)
  | ({ kind: "funcref";  params: WacType[]; ret: WacType } & Pos);

// Expressions -----------------------------------------------------------------

export type Expr =
  // `resolved` is filled in by wacTypeCheck when the literal takes its type
  // from context (`u32 x = 5`). The emitter reads it rather than re-deciding,
  // so the two cannot disagree about a literal's width or signedness.
  | ({ kind: "int";      value: string; resolved?: WacType } & Pos)
  // `resolved` is filled in by the type checker when the literal took its type from
  // context rather than from its own notation — see the `int` case above; floats follow
  // the same rule, so they carry the same annotation.
  | ({ kind: "float";    value: string; resolved?: WacType } & Pos)
  | ({ kind: "string";   value: string } & Pos)
  | ({ kind: "bool";     value: boolean } & Pos)
  | ({ kind: "null" } & Pos)
  // `constRef` is set by wacTypeCheck when the name resolves to a module-level
  // constant. Recording the declaration here means neither typeOfExpr nor the
  // emitter needs to know which file it is in — the same reason `resolved`
  // exists on int literals.
  | ({ kind: "ident";    name: string; constRef?: ConstDecl } & Pos)
  | ({ kind: "unary";    op: string; expr: Expr } & Pos)
  | ({ kind: "binary";   op: string; left: Expr; right: Expr } & Pos)
  | ({ kind: "cast";     op: string; expr: Expr; type: WacType } & Pos)
  | ({ kind: "is";       expr: Expr; not: boolean; rhs: WacType | "null" | Expr } & Pos)
  /**
   * `resultType` is the unified branch type, filled in by the type checker and read by the
   * emitter — the same annotate-then-consume arrangement `matchExpr` uses, and for the same
   * reason: both used to derive it independently and drifted [issue 0051].
   */
  | ({ kind: "ternary";  cond: Expr; then: Expr; else_: Expr; resultType?: WacType } & Pos)
  | ({ kind: "call";     callee: Expr; args: Expr[]; variantTypeIndex?: number } & Pos)
  | ({ kind: "index";    expr: Expr; idx: Expr } & Pos)
  // `variantTypeIndex` is filled in by the type checker when this field access is
  // really a payload-less variant value (`Shape.Point`), and likewise on the `call`
  // node for `Shape.Circle(2.0)`. The emitter needs the *resolved* variant, and it
  // has no file scope to resolve a name in — it used to search the program's enums by
  // name, which picked the wrong enum whenever two files declared the same name.
  | ({ kind: "field";    expr: Expr; name: string; variantTypeIndex?: number } & Pos)
  | ({ kind: "unwrap";   expr: Expr } & Pos)
  | ({ kind: "construct"; ctype: WacType; args: Expr[]; named?: { name: string; val: Expr }[] } & Pos)
  // `size` is the sized form `T[n](...)`, `fixed` the literal form `T[](a, b)`; exactly
  // one is used. `fill` is the sized form's optional element value, written
  // `T[n](fill: v)` — named-argument syntax because `T[n](v)` would be ambiguous with
  // indexing a funcref array and calling it, `arr[i](5)`.
  | ({ kind: "arrNew";   elem: WacType; size: Expr | null; fixed: Expr[]; fill?: Expr } & Pos)
  // `match` in expression position: every arm gives a value rather than statements.
  // `enumBaseTypeIndex` is filled in by the checker, exactly as on the statement form.
  // `resultType` is the unified arm type, filled in by the checker so the emitter can
  // declare the block's result without re-deriving it.
  | ({ kind: "matchExpr"; subject: Expr; arms: MatchArm[]; enumBaseTypeIndex?: number;
       resultType?: WacType } & Pos)
  // ++/-- as an expression: postfix evaluates to the old value, prefix to the
  // new one. The operand must be an lvalue (variable, field, array element).
  | ({ kind: "incr-expr"; op: "++" | "--"; prefix: boolean; lval: Lvalue } & Pos);

// lvalue — restricted subset used in assignments
export type Lvalue =
  | ({ kind: "lv-ident";   name: string } & Pos)
  | ({ kind: "lv-field";   base: Lvalue; field: string } & Pos)
  | ({ kind: "lv-index";   base: Lvalue; idx: Expr } & Pos)
  | ({ kind: "lv-unwrap";  base: Lvalue } & Pos);

// Statements ------------------------------------------------------------------

export type Stmt =
  | ({ kind: "var";      isConst: boolean; type: WacType; name: string; init: Expr } & Pos)
  | ({ kind: "assign";   op: string; lval: Lvalue; rhs: Expr } & Pos)
  | ({ kind: "incr";     op: "++" | "--"; lval: Lvalue } & Pos)
  // `narrowName`/`narrowTypeIndex` are filled in by the type checker when the condition is
  // `ident is Type`: the name is shadowed at the narrower type inside the then-block, which
  // the emitter needs a local and a cast for [see issue 0029].
  | ({ kind: "if";       cond: Expr; then: Block; els: ElseBranch;
       narrowName?: string; narrowTypeIndex?: number } & Pos)
  | ({ kind: "while";    cond: Expr; body: Block } & Pos)
  | ({ kind: "for";      init: Stmt | null; cond: Expr | null; update: Stmt | null; body: Block } & Pos)
  | ({ kind: "dowhile";  body: Block; cond: Expr } & Pos)
  | ({ kind: "switch";   expr: Expr; cases: SwitchCase[] } & Pos)
  | ({ kind: "match";    subject: Expr; arms: MatchArm[];
        /** Type index of the enum's base struct; set by the type checker. */
        enumBaseTypeIndex?: number } & Pos)
  | ({ kind: "return";   value: Expr | null } & Pos)
  | ({ kind: "break" } & Pos)
  | ({ kind: "continue" } & Pos)
  | ({ kind: "trap"; value?: Expr } & Pos)
  | ({ kind: "block";    block: Block } & Pos)
  | ({ kind: "expr";     expr: Expr } & Pos);

// else branch: another if, or a plain block (null = no else)
export type ElseBranch = ({ kind: "else-if"; stmt: Stmt } & Pos) | ({ kind: "else-block"; block: Block } & Pos) | null;

/**
 * One `match` arm.
 *
 * `variant` is null for the `else` arm. `bindings` names the payload fields
 * positionally; an empty array means the pattern omitted its parentheses, which
 * ignores every payload. A binding named `_` is a deliberate discard and may repeat.
 */
export type MatchArm = {
  variant: string | null;
  bindings: string[];
  body: Stmt[];
  /**
   * The arm's value, when the `match` is an expression rather than a statement. `body` is
   * empty in that case and this is set; the two forms share everything else, including the
   * annotations below, so the checker and emitter differ only in what they do with the
   * arm's contents.
   */
  value?: Expr;
  /**
   * Filled in by the type checker, consumed by the emitter — the same
   * annotate-then-consume arrangement the resolver uses for `resolvedTypeIndex`.
   *
   * The emitter cannot work these out for itself: local allocation runs over the AST
   * with no access to the enum table, so a payload's type has to be recorded here or
   * it is unavailable when locals are declared.
   */
  tag?: number;
  variantTypeIndex?: number;
  bindingTypes?: WacType[];
} & Pos;

export type Block      = { stmts: Stmt[] } & Pos;
export type SwitchCase = { value: Expr | "default"; body: Stmt[] } & Pos;

// Top-level -------------------------------------------------------------------

/**
 * `injected` marks an import the *compiler* added rather than the author.
 *
 * Monomorphisation puts a materialised struct in its template's file, so any type its arguments
 * mention has to resolve from there — and the author wrote the type argument at the use site, not
 * an import. `export` governs what one author may take from another's file; it has nothing to say
 * about the bookkeeping that makes a generated copy resolve, so an injected import is exempt from
 * it.
 */
export type ImportItem = { name: string; alias: string; injected?: boolean } & Pos;
/**
 * `prefix` names a provider rather than a directory: the sources it offers need not be files, and
 * `path` is then the module *inside* that provider (empty for a provider of one module, as `core`
 * is today). With no `prefix`, `path` is an ordinary relative file path and means what it always
 * did. Either way `importKey` in wacResolve is what turns the pair into the key a program is filed
 * under — nothing else should be joining paths.
 */
export type Import     = { tag: "import"; path: string; prefix?: string; items: ImportItem[] } & Pos;

/**
 * `isConst` records a leading `const` on the parameter, which forbids reassigning it and
 * — because const is deep — mutating anything reachable through it. It is the same
 * guarantee `const this` gives a method receiver, which was previously available to
 * methods and to nothing else.
 */
export type Param      = { isConst: boolean; type: WacType; name: string } & Pos;
export type FieldDecl  = { isConst: boolean; type: WacType; name: string } & Pos;
export type MethodDecl = {
  isOverride: boolean; returnType: WacType; name: string;
  hasThis: boolean; thisConst: boolean; params: Param[];
  body: Block;
} & Pos;

export type StructDecl = {
  tag: "struct"; isConst: boolean; exported: boolean; name: string; parent: string | null;
  fields: FieldDecl[]; methods: MethodDecl[];
  /**
   * Type parameter names, for a generic struct: `struct Vec<T>` has `["T"]`.
   *
   * A declaration with type parameters is a *template*. The resolver monomorphises it — one
   * concrete struct per distinct set of arguments — so the type checker and the emitter never
   * see one, exactly as they never see an `enum`.
   */
  typeParams: string[];
} & Pos;

export type FuncDecl = {
  tag: "func"; exported: boolean; returnType: WacType; name: string;
  params: Param[]; body: Block;
  /**
   * Type parameter names, for a generic function: `T max<T>(T a, T b)` has `["T"]`.
   *
   * As with a generic struct, a declaration with type parameters is a *template* — the resolver
   * monomorphises it and nothing downstream sees one. Unlike a struct, the arguments are never
   * written at the use site: they are inferred from the argument types.
   */
  typeParams: string[];
} & Pos;

/** One variant of an enum, with named payload fields. */
export type VariantDecl = {
  name: string;
  fields: Param[];
} & Pos;

export type EnumDecl = {
  tag: "enum"; exported: boolean; name: string;
  variants: VariantDecl[];
  /** `enum Option<T>` has ["T"]. Empty for an ordinary enum. */
  typeParams: string[];
  /**
   * Methods declared in the enum body, after the variants. They attach to the enum's
   * generated base struct, so `this` is the enum type and `match (this)` is how a method
   * reaches a variant.
   */
  methods: MethodDecl[];
} & Pos;

/**
 * A module-level constant. `init` must be a compile-time constant expression;
 * the type checker enforces that and the emitter substitutes it at each use,
 * so there is no storage and no initialisation order to worry about.
 */
export type ConstDecl = {
  tag: "const"; exported: boolean; type: WacType; name: string; init: Expr;
} & Pos;

export type TopLevel = Import | StructDecl | FuncDecl | EnumDecl | ConstDecl;
export type Program  = { items: TopLevel[] };

export type ParseError = { message: string; file: string; line: number; col: number; span?: number; annotation?: string; hint?: string };
export type ParseResult = { program: Program; errors: ParseError[] };

// ── Parser ────────────────────────────────────────────────────────────────────

const PRIM_TYPES = new Set([
  "i32", "i64", "u32", "u64", "f32", "f64", "bool", "void", "string",
  "anyref", "i31ref", "i8", "i16", "u8", "u16",
]);

const COMPOUND_OPS = new Set([
  "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=", "<<=", ">>=", ">>>=",
]);

/**
 * The parser, as an object with several entry points.
 *
 * wac is no longer the only surface syntax — `wapyParse` reads an indentation-based one — and
 * the two differ in their *structure*, not in their expressions. So the expression and type
 * grammar is shared rather than reimplemented, and this is where the sharing happens: a second
 * frontend parses its own declarations and statements, and calls `expression` and `type` for
 * everything below that.
 *
 * The alternative was for the other frontend to rewrite its tokens into wac's shape and let
 * this parse the result. That works and it was the first attempt; it is also why malformed
 * input in the other surface produced messages about tokens nobody had written, and in two
 * cases produced none at all. A frontend that does not parse cannot diagnose.
 */
export function makeParser(tokens: Token[], file: string) {
  let cur = 0;
  const errors: ParseError[] = [];

  // ── Token access helpers ──────────────────────────────────────────────────

  function tok(offset = 0): Token {
    const i = cur + offset;
    return tokens[i] ?? tokens[tokens.length - 1];
  }

  function pos(offset = 0): Pos {
    const t = tok(offset);
    return { line: t.line, col: t.col };
  }

  function at(k: string, offset = 0): boolean {
    const t = tok(offset);
    // For literal tokens, only match by kind (so a string "!" doesn't match the "!" operator)
    if (t.kind === "string" || t.kind === "int" || t.kind === "float") return t.kind === k;
    return t.kind === k || t.text === k;
  }

  function advance(): Token { return tokens[cur++] ?? tokens[tokens.length - 1]; }

  function expect(k: string): Token {
    if (at(k)) return advance();
    const t = tok();
    errors.push({ message: `expected '${k}', found '${t.text}'`, file, line: t.line, col: t.col });
    return t;
  }

  /**
   * Rewrite the current token, for splitting a munched `>>` or `>>>` in a type argument list.
   *
   * `Vec<Vec<i32>>` ends in what the lexer read as a single shift operator. Rather than make the
   * lexer track nesting — which would mean it could no longer be a pure token stream — the
   * parser consumes one `>` worth and leaves the rest in place.
   */
  function replaceCurrent(text: string): void {
    const t = tokens[cur];
    tokens[cur] = { ...t, kind: text as typeof t.kind, text, col: t.col + 1 };
  }

  function consume(k: string): boolean {
    if (at(k)) { advance(); return true; }
    return false;
  }

  function err(msg: string, offset = 0): void {
    const t = tok(offset);
    errors.push({ message: msg, file, line: t.line, col: t.col });
  }

  /**
   * A keyword token, told apart from an identifier without importing the lexer's set.
   *
   * The lexer gives a keyword a `kind` equal to its own text, which no identifier has —
   * an identifier is always kind `"ident"`. Punctuation shares that property, so the text
   * has to look like a word as well.
   */
  function isKeyword(t: Token | undefined): boolean {
    return t !== undefined && t.kind === t.text && /^[a-z]+$/.test(t.text);
  }

  /**
   * The name in a declaration, or a diagnostic that says why there isn't one.
   *
   * Worth its own function because of what the message used to be. `from` was once a
   * keyword, and a parameter named `from` — in `slice(a, from, to)`, which is where such a
   * name naturally goes — reported a missing semicolon at the *next* declaration, a
   * hundred lines further on. Naming the keyword at the place it appears is the whole
   * difference between a five-second fix and a bisect.
   */
  function declName(what: string): string {
    if (at("ident")) return advance().text;
    const t = tok();
    if (isKeyword(t)) {
      err(`'${t.text}' is a keyword and cannot be used as a ${what}`);
      // Consumed, so the rest of the declaration still parses and one mistake yields one
      // error rather than a cascade of them.
      advance();
      return t.text;
    }
    err(`expected ${what}`);
    return "?";
  }

  // ── Type parsing ──────────────────────────────────────────────────────────

  function isPrimType(): boolean {
    return (at("ident") && PRIM_TYPES.has(tok().text)) || at("void");
  }

  function parseType(): WacType {
    const p = pos();

    // fn[R(P,...)] — funcref type
    if (at("fn")) {
      advance();
      expect("[");
      const ret = parseType();
      expect("(");
      const params: WacType[] = [];
      if (!at(")")) {
        params.push(parseType());
        while (consume(",")) params.push(parseType());
      }
      expect(")");
      expect("]");
      let fnBase: WacType = { kind: "funcref", params, ret, ...p };
      // Handle [] and ? suffixes: fn[R(P)][] = array of funcref, fn[R(P)]? = nullable funcref
      while (true) {
        if (at("[") && at("]", 1)) {
          const arrP = pos(); advance(); advance();
          fnBase = { kind: "array", elem: fnBase, ...arrP };
        } else if (at("?")) {
          const nP = pos(); advance();
          fnBase = { kind: "nullable", inner: fnBase, ...nP };
        } else break;
      }
      return fnBase;
    }

    // Primitive or struct name
    let name: string;
    if (isPrimType()) {
      name = tok().text; advance();
    } else if (at("ident")) {
      name = tok().text; advance();
    } else {
      err(`expected type, found '${tok().text}'`);
      name = "i32";
    }

    // `Vec<i32>` — type arguments. Only in *type* position, never in an expression, because
    // `IDENT <` is ambiguous with less-than there. wac can afford the restriction because every
    // declaration is explicitly typed, so a generic construction always has an expected type to
    // take its arguments from [see the design note and generics.md].
    const typeArgs = PRIM_TYPES.has(name) ? undefined : parseTypeArgs();

    let base: WacType = PRIM_TYPES.has(name)
      ? { kind: "prim", name, ...p }
      : { kind: "struct", name, typeArgs, ...p };

    // Interleave ? (nullable) and [] (array) suffixes in order.
    // e.g. Node?[] = array(nullable(Node)), i32[]? = nullable(array(i32))
    while (true) {
      if (at("[") && at("]", 1)) {
        const arrP = pos(); advance(); advance(); // [ ]
        base = { kind: "array", elem: base, ...arrP };
      } else if (at("?")) {
        const nP = pos(); advance();
        base = { kind: "nullable", inner: base, ...nP };
      } else {
        break;
      }
    }

    return base;
  }

  // ── Lookahead: var decl vs expression statement ───────────────────────────

  function looksLikeVarDeclAt(i: number): boolean {
    if (tokens[i]?.kind === "const" && tokens[i+1]?.kind !== "this") i++;
    const t = tokens[i];
    if (!t || t.kind === "eof") return false;
    // fn[...] type — always a type
    if (t.kind === "fn") return true;
    // Primitive type keyword or struct name
    if (t.kind !== "ident" && t.kind !== "void") return false;
    let j = i + 1;
    // Skip a type-argument list: `Vec<i32> v = ...` is a declaration, and without this the
    // statement parsed as the expression `Vec < i32` and failed at the `=`.
    //
    // This is where the classic C++ ambiguity would live, and wac gets off lightly: the scan
    // requires a balanced `<...>` *followed by an identifier*, so `a < b;` and `f(a < b)` are
    // unaffected. It does claim `a < b > c` as a declaration of `c`, which in expression terms
    // would be `(a < b) > c` — comparing a bool, which wac rejects anyway.
    if (tokens[j]?.kind === "<") {
      let depth = 0;
      // A type argument can contain parentheses and brackets — `Box<fn[i32(i32)]>` — so the scan
      // tracks those too. Bailing on any `)` was wrong for exactly that case: the funcref's own
      // `)` ended the scan, the declaration was read as an expression, and `fn` then failed in
      // expression position with a message about array construction.
      let group = 0;
      let k = j;
      while (k < tokens.length && tokens[k]?.kind !== "eof") {
        const kind = tokens[k].kind as string;
        if (kind === "(" || kind === "[") group++;
        else if (kind === ")" || kind === "]") {
          if (group === 0) break;        // a closer we never opened: not a type list
          group--;
        } else if (kind === "<") depth++;
        else if (kind === ">") { depth--; if (depth === 0) { k++; break; } }
        // `Vec<Vec<i32>>` closes with a munched `>>`; parseType splits it, and the scan has to
        // account for both halves here or the depth never reaches zero.
        else if (kind === ">>") { depth -= 2; if (depth <= 0) { k++; break; } }
        else if (kind === ">>>") { depth -= 3; if (depth <= 0) { k++; break; } }
        else if (kind === ";" || kind === "{") break;   // not a type list
        k++;
      }
      if (depth <= 0 && k > j) j = k;
    }
    // Skip interleaved ? and [] suffixes (matching parseType's suffix logic)
    while (true) {
      if (tokens[j]?.kind === "[" && tokens[j+1]?.kind === "]") { j += 2; }
      else if (tokens[j]?.kind === "?") { j++; }
      else break;
    }
    // Expect an identifier (variable name) next
    if (tokens[j]?.kind === "ident") return true;
    // ...or a keyword where the name should be, but only when an `=` follows it. Without
    // that guard `x as i32;` would be read as a declaration named `as`; with it, only
    // `i32 match = ...` is claimed, and `parseVarDecl` can then say which word is the
    // problem instead of reporting a missing semicolon further down the file.
    return isKeyword(tokens[j]) && tokens[j + 1]?.kind === "=";
  }

  function looksLikeVarDecl(): boolean { return looksLikeVarDeclAt(cur); }
